--- a/build.config
+++ b/build.config
@@ -1,9 +1,9 @@
 ### Target Vendor/Product (support only Ralink RT3883/MT7620/MT7621/MT7628)
-CONFIG_VENDOR=ZTE
+CONFIG_VENDOR=XIAOMI
 CONFIG_PRODUCT=MT7621
 
 ### Target ProductID (board select, max 23 ASCII symbols)
-CONFIG_FIRMWARE_PRODUCT_ID="ZTE_E8820S"
+CONFIG_FIRMWARE_PRODUCT_ID="MI-R3G"
 
 ############################################################
 ### Linux kernel configuration
